samples/_failures_safe/1761201192_553d5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bd83f05.c: In function ‘main’:
./samples/SAFE/__tmp_1bd83f05.c:154:12: error: missing terminating " character
  154 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_1bd83f05.c:154:5: error: expected expression at end of input
  154 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_1bd83f05.c:154:5: error: expected declaration or statement at end of input
